--- a/results/results.css
+++ b/results/results.css
@@ -98,5 +98,13 @@ img {
 }
 
 #voltar {
-    font-size: 20px;
+    font-family: 'Luckiest Guy', cursive;
+    font-weight: lighter;
+    font-size: 30px;
+    color: white;
+    text-align: center;
+    padding: 0px;
+    margin: 0px;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #0d589e;
 }
