--- a/pontuacao/pontuacao.css
+++ b/pontuacao/pontuacao.css
@@ -75,17 +75,18 @@ img {
 }
 
 #voltar {
+    text-align: center;
+}
+#voltar > p > a {
     font-family: 'Luckiest Guy', cursive;
     font-weight: lighter;
     font-size: 30px;
     color: white;
-    text-align: center;
     padding: 0px;
     margin: 0px;
-    -webkit-text-stroke-width: 0px;
+    -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: #0d589e;
 }
-
 .pts {
     padding-left: 0px;
     text-align: center;
