--- a/ranking/ranking.css
+++ b/ranking/ranking.css
@@ -81,14 +81,16 @@ img {
 }
 
 #voltar {
+    text-align: center;
+}
+#voltar > p > a {
     font-family: 'Luckiest Guy', cursive;
     font-weight: lighter;
     font-size: 30px;
     color: white;
-    text-align: center;
     padding: 0px;
     margin: 0px;
-    -webkit-text-stroke-width: 0px;
+    -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: #0d589e;
 }
 
