--- a/results/results.css
+++ b/results/results.css
@@ -68,7 +68,7 @@ table {
     border-collapse: collapse;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: white;
-    font-size: 15px;
+    font-size: 16px;
     font-weight: bold;
     margin-bottom: 50px;
 }
@@ -108,4 +108,14 @@ img {
     margin: 0px;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: #0d589e;
+}
+
+span {
+   /* display: none;*/
+   color: greenyellow;
+    font-size: 12px;
+}
+
+span.dif {
+    color: rgb(64, 192, 243);
 }
