--- a/results/results.css
+++ b/results/results.css
@@ -61,10 +61,10 @@ a:hover {
 }
 
 table {
-    margin-left: 200px;
-    margin-right: 200px;
+    margin-left: 100px;
+    margin-right: 100px;
     background-image: linear-gradient(to right, var(--cor5), var(--cor6), var(--cor7), var(--cor8));
-    width: 600px;;
+    width: 800px;;
     border-collapse: collapse;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: white;
@@ -110,6 +110,10 @@ img {
     -webkit-text-stroke-color: #0d589e;
 }
 
+.car {
+    width: 70px;
+}
+
 span {
    /* display: none;*/
    color: greenyellow;
@@ -118,4 +122,75 @@ span {
 
 span.dif {
     color: rgb(64, 192, 243);
+}
+
+span.Mercedes {
+    font-variant: small-caps;
+    color: cyan
+}
+
+span.Caterham {
+    font-variant: small-caps;
+    color: rgb(17, 245, 17);
+}
+
+span.Ferrari {
+    font-variant: small-caps;
+    color: rgb(255, 54, 54);
+}
+
+span.RedBull {
+    font-variant: small-caps;
+    color: rgb(2, 60, 234);
+}
+
+span.Satsu {
+    font-variant: small-caps;
+    color: rgb(235, 2, 235);
+}
+
+span.ToroRosso {
+    font-variant: small-caps;
+    color: rgb(2, 60, 234);
+}
+
+span.Williams {
+    font-variant: small-caps;
+    color: rgb(66, 120, 246);
+}
+
+span.Lotus {
+    font-variant: small-caps;
+    color: yellow;
+}
+
+span.Sauber {
+    font-variant: small-caps;
+    color: rgb(97, 5, 5);
+}
+
+span.McLaren {
+    font-variant: small-caps;
+    color: rgb(254, 157, 31);
+}
+
+span.ForceIndia {
+    font-variant: small-caps;
+    color: rgb(255, 204, 0);
+}
+
+span.HRT {
+    font-variant: small-caps;
+    color: sienna;
+}
+
+span.Marussia {
+    font-variant: small-caps;
+    color: black;
+
+}
+
+span.TecNova {
+    font-variant: small-caps;
+    color: rgb(235, 2, 235);
 }
