--- a/ranking/ranking.css
+++ b/ranking/ranking.css
@@ -57,6 +57,13 @@ table {
     margin-bottom: 50px;
 }
 
+#construtor {
+    width: 400px;
+    margin-left: 300px;
+    margin-right: 300px;
+    font-size: 20px;
+}
+
 th {
     padding: 5px;
     height: 30px;
@@ -70,11 +77,14 @@ td {
     border: 1px solid white;
 }
 
-.edition {
-    padding: 0px;
-    font-variant: small-caps;
-    text-align: center;
+.const {
+    width: 35px;
 }
+
+.team {
+    padding-left: 30px;
+}
+
 
 img {
     padding-right: 10px;
@@ -98,4 +108,75 @@ img {
     text-align: center;
     margin: 0px;
     padding-left: 0px;
+}
+
+span.Mercedes {
+    font-variant: small-caps;
+    color: cyan
+}
+
+span.Caterham {
+    font-variant: small-caps;
+    color: rgb(17, 245, 17);
+}
+
+span.Ferrari {
+    font-variant: small-caps;
+    color: rgb(255, 54, 54);
+}
+
+span.RedBull {
+    font-variant: small-caps;
+    color: rgb(2, 60, 234);
+}
+
+span.Satsu {
+    font-variant: small-caps;
+    color: rgb(235, 2, 235);
+}
+
+span.ToroRosso {
+    font-variant: small-caps;
+    color: rgb(2, 60, 234);
+}
+
+span.Williams {
+    font-variant: small-caps;
+    color: rgb(66, 120, 246);
+}
+
+span.Lotus {
+    font-variant: small-caps;
+    color: yellow;
+}
+
+span.Sauber {
+    font-variant: small-caps;
+    color: rgb(97, 5, 5);
+}
+
+span.McLaren {
+    font-variant: small-caps;
+    color: rgb(254, 157, 31);
+}
+
+span.ForceIndia {
+    font-variant: small-caps;
+    color: rgb(255, 204, 0);
+}
+
+span.HRT {
+    font-variant: small-caps;
+    color: sienna;
+}
+
+span.Marussia {
+    font-variant: small-caps;
+    color: rgba(82, 82, 82, 0.698);
+
+}
+
+span.TecNova {
+    font-variant: small-caps;
+    color: rgb(235, 2, 235);
 }
