--- a/ranking/ranking.css
+++ b/ranking/ranking.css
@@ -88,6 +88,87 @@ img {
     padding-right: 10px;
 }
 
+.tp {
+    text-align: center;
+    margin: 0px;
+    padding-left: 0px;
+}
+
+span {
+    margin-left: 20px;
+}
+
+span#Mercedes {
+    font-variant: small-caps;
+    color: cyan
+}
+
+span#Caterham {
+    font-variant: small-caps;
+    color: rgb(17, 245, 17);
+}
+
+span#Ferrari {
+    font-variant: small-caps;
+    color: rgb(255, 54, 54);
+}
+
+span#RedBull {
+    font-variant: small-caps;
+    color: rgb(2, 60, 234);
+}
+
+span#Satsu {
+    font-variant: small-caps;
+    color: rgb(235, 2, 235);
+}
+
+span#ToroRosso {
+    font-variant: small-caps;
+    color: rgb(2, 60, 234);
+}
+
+span#Williams {
+    font-variant: small-caps;
+    color: rgb(66, 120, 246);
+}
+
+span#Lotus {
+    font-variant: small-caps;
+    color: yellow;
+}
+
+span#Sauber {
+    font-variant: small-caps;
+    color: rgb(97, 5, 5);
+}
+
+span#McLaren {
+    font-variant: small-caps;
+    color: rgb(254, 157, 31);
+}
+
+span#ForceIndia {
+    font-variant: small-caps;
+    color: rgb(255, 204, 0);
+}
+
+span#HRT {
+    font-variant: small-caps;
+    color: sienna;
+}
+
+span#Marussia {
+    font-variant: small-caps;
+    color: rgba(82, 82, 82, 0.698);
+
+}
+
+span#TecNova {
+    font-variant: small-caps;
+    color: rgb(235, 2, 235);
+}
+
 #voltar {
     text-align: center;
 }
@@ -100,85 +181,4 @@ img {
     margin: 0px;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: #0d589e;
-}
-
-.tp {
-    text-align: center;
-    margin: 0px;
-    padding-left: 0px;
-}
-
-span {
-    margin-left: 20px;
-}
-
-span.Mercedes {
-    font-variant: small-caps;
-    color: cyan
-}
-
-span.Caterham {
-    font-variant: small-caps;
-    color: rgb(17, 245, 17);
-}
-
-span.Ferrari {
-    font-variant: small-caps;
-    color: rgb(255, 54, 54);
-}
-
-span.RedBull {
-    font-variant: small-caps;
-    color: rgb(2, 60, 234);
-}
-
-span.Satsu {
-    font-variant: small-caps;
-    color: rgb(235, 2, 235);
-}
-
-span.ToroRosso {
-    font-variant: small-caps;
-    color: rgb(2, 60, 234);
-}
-
-span.Williams {
-    font-variant: small-caps;
-    color: rgb(66, 120, 246);
-}
-
-span.Lotus {
-    font-variant: small-caps;
-    color: yellow;
-}
-
-span.Sauber {
-    font-variant: small-caps;
-    color: rgb(97, 5, 5);
-}
-
-span.McLaren {
-    font-variant: small-caps;
-    color: rgb(254, 157, 31);
-}
-
-span.ForceIndia {
-    font-variant: small-caps;
-    color: rgb(255, 204, 0);
-}
-
-span.HRT {
-    font-variant: small-caps;
-    color: sienna;
-}
-
-span.Marussia {
-    font-variant: small-caps;
-    color: rgba(82, 82, 82, 0.698);
-
-}
-
-span.TecNova {
-    font-variant: small-caps;
-    color: rgb(235, 2, 235);
 }
