--- a/pontuacao.css
+++ b/pontuacao.css
@@ -24,7 +24,9 @@ body {
     font-variant: small-caps;
     
 }
-
+span {
+    margin-left: 20px;
+}
 h1, h2 {
     font-family: 'Luckiest Guy', cursive;
     font-weight: bolder;
@@ -43,23 +45,16 @@ a {
 }
 
 table {
-    margin-left: 200px;
-    margin-right: 200px;
+    margin-left: 300px;
+    margin-right: 300px;
     background-image: linear-gradient(to right, var(--cor5), var(--cor6), var(--cor7), var(--cor8));
-    width: 600px;
+    width: 400px;
     border-collapse: collapse;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: white;
     font-size: 15px;
     font-weight: bold;
     margin-bottom: 50px;
-}
-
-#construtor {
-    width: 400px;
-    margin-left: 300px;
-    margin-right: 300px;
-    font-size: 20px;
 }
 
 th {
@@ -75,94 +70,8 @@ td {
     border: 1px solid white;
 }
 
-.const {
-    width: 35px;
-}
-
-.team {
-    padding-left: 30px;
-}
-
-
 img {
     padding-right: 10px;
-}
-
-
-
-span {
-    margin-left: 20px;
-}
-
-span#Mercedes {
-    font-variant: small-caps;
-    color: cyan
-}
-
-span#Caterham {
-    font-variant: small-caps;
-    color: rgb(17, 245, 17);
-}
-
-span#Ferrari {
-    font-variant: small-caps;
-    color: rgb(255, 54, 54);
-}
-
-span#RedBull {
-    font-variant: small-caps;
-    color: rgb(2, 60, 234);
-}
-
-span#Satsu {
-    font-variant: small-caps;
-    color: rgb(235, 2, 235);
-}
-
-span#ToroRosso {
-    font-variant: small-caps;
-    color: rgb(2, 60, 234);
-}
-
-span#Williams {
-    font-variant: small-caps;
-    color: rgb(66, 120, 246);
-}
-
-span#Lotus {
-    font-variant: small-caps;
-    color: yellow;
-}
-
-span#Sauber {
-    font-variant: small-caps;
-    color: rgb(97, 5, 5);
-}
-
-span#McLaren {
-    font-variant: small-caps;
-    color: rgb(254, 157, 31);
-}
-
-span#ForceIndia {
-    font-variant: small-caps;
-    color: rgb(255, 204, 0);
-}
-
-span#HRT {
-    font-variant: small-caps;
-    color: sienna;
-}
-
-span#Marussia {
-    font-variant: small-caps;
-    color: rgba(82, 82, 82, 0.698);
-
-}
-
-span#TecNova {
-    font-variant: small-caps;
-    color: rgb(235, 2, 235);
 }
 
 #voltar {
@@ -177,4 +86,13 @@ span#TecNova {
     margin: 0px;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: #0d589e;
+}
+.pts {
+    padding-left: 0px;
+    text-align: center;
+    width: 100px;
+}
+
+.name {
+    padding-left: 30px;
 }
